Spacing fix

--- a/themes/biztrox-hugo/assets/css/style.css
+++ b/themes/biztrox-hugo/assets/css/style.css
@@ -222,12 +222,12 @@ button {
 }
 
 .section {
-  padding: 30px 0 100px 0;
+  padding: 30px 0 30px 0;
 }
 
 @media (max-width: 575px) {
   .section {
-    padding: 30px 0 100px 0;
+    padding: 30px 0 30px 0;
   }
 }
 
@@ -1937,7 +1937,7 @@ blockquote{
 }
 
 .recent-post-thumb{
-  max-width: 100px;
+  width: 130px;
 }
 
 /* blog single end */
